Fix text color in light/dark mode with Bootstrap 5.3
See https://blog.getbootstrap.com/2023/05/30/bootstrap-5-3-0/ for the release announcement with details on the color modes.

--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -22,3 +22,6 @@ $autocomplete-panel-border-color: #333;
 $autocomplete-item-color: #333;
 $autocomplete-item-color-hover: #FFF;
 $autocomplete-item-background-color-hover: #abacad;
+
+$body-color: #000;
+$body-color-dark: #fff;
